# Clavis

./: .gitignore  Context.md  README.md  package-lock.json  package.json  setup-flatpak.sh  vite.config.ts
.github/workflows/: ci.yml  publish.yml
assets/installer/: EULA.txt
extension/: build.js  generate-key.js  manifest.chrome.json  manifest.firefox.json  manifest.json  package-lock.json  package.json  tsconfig.json
extension/src/: background.js  background.ts  content.js  content.ts  global.d.ts  ws-client.js  ws-client.ts
extension/src/compat/: browser-shim.ts
extension/src/popup/: index.html  popup.css  popup.html  popup.js  popup.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  clavis_template.csv  deny.toml  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/migrations/: 0001_initial.sql  0002_security_setup.sql  0002_settings.sql  0003_autotype_settings.sql  0004_recovery_attempts.sql  0005_settings_and_backup.sql
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/breach/: mod.rs
src-tauri/src/clipboard/: mod.rs
src-tauri/src/crypto/: cipher.rs  generator.rs  kdf.rs  memlock.rs  mod.rs
src-tauri/src/lib/: tauri.ts
src-tauri/src/notifications/: mod.rs
src-tauri/src/totp/: mod.rs
src-tauri/src/vault/: autotype.rs  command.rs  db.rs  mod.rs  models.rs
src-tauri/src/ws/: mod.rs
src/components/: AutotypePicker.tsx  OnboardingTour.tsx  PasswordGeneratorModal.tsx  PasswordStrengthMeter.tsx  TotpDisplay.tsx
src/components/dashboard/: EmptyState.tsx
src/components/forgot/: StepComplete.tsx  StepNewPassword.tsx  StepQuestions.tsx
src/components/setup/: StepHint.tsx  StepPassword.tsx  StepQuestions.tsx  StepSummary.tsx
src/components/tour/: TourCallout.tsx  TourOverlay.tsx
src/components/ui/: PageHelp.tsx
src/hooks/: useTour.ts  useVaultStore.ts
src/lib/: activity.ts  passwordStrength.ts  tauri.ts  tourSteps.ts  types.ts
src/pages/: ActivityLog.tsx  Authenticator.tsx  Dashboard.tsx  ForgotPassword.tsx  Help.tsx  Security.tsx  Settings.tsx  Setup.tsx  Unlock.tsx
src/pages/onboarding/: Eula.tsx
