[package]
name = "clavis"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
license = "MIT"
default-run = "clavis"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "clavis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
hex = "0.4"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "migrate"] }
argon2 = "0.5"
aes-gcm = "0.10"
ring = "0.17"
zeroize = { version = "1", features = ["derive"] }
totp-rs = { version = "5", features = ["gen_secret"] }
arboard = "3.4.0"
xcap = "0.9.6"
base64 = "0.22.1"
image = "0.25.1"
tokio-tungstenite = "0.21"
# Approved strictly for the HaveIBeenPwned (HIBP) checker module (E4-10)
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
# Approved strictly for the HaveIBeenPwned (HIBP) checker module (E4-10)
sha1 = "0.10"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
anyhow = "1"
secrecy = { version = "0.8", features = ["serde"] }
futures-util = "0.3"
enigo = "0.1.3"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"

[target.'cfg(target_os = "windows")'.dependencies]
libsqlite3-sys = { version = "0.27", features = ["bundled-sqlcipher-vendored-openssl"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
libsqlite3-sys = { version = "0.27", features = ["bundled-sqlcipher"] }


